[package]
name = "ktx"
version = "0.3.1"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "KTX texture storage format parsing"
repository = "https://github.com/alexheretic/ktx"
keywords = ["ktx", "texture"]
license = "Apache-2.0"
readme="README.md"
exclude = ["/tests/*.ktx"]

[dependencies]
byteorder = { version = "1.3", default-features = false }

[features]
default = ["std"]
std = []

[dev-dependencies]
blake2 = "0.8"
